syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jr.JRService";
option java_outer_classname = "JRProto";

package JRService;

//service definition
service JRService {
    rpc ListSongs (SingerId) returns (SongList) {}

    rpc GetSongs (SingerId) returns (stream Song) {}
}

message SingerId {
    int32 id = 1;
}

message Singer {
    int32 id = 1;
    string name = 2;
}

message Song {
    int32 id = 1;
    string name = 2;
    Singer singer = 3;
}

message SongList {
    repeated Song songs= 1;
}